Added cover + shape divider styling

--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 *,
 ::before,
@@ -12,6 +13,13 @@ body {
   font-family: $primary-font;
   background-color: $light;
   font-size: $text;
+}
+
+main{
+  margin:0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 ul{
