--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -1,8 +1,9 @@
 .header {
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     background-color: $dark;
-    padding: 20px 40px;
+    padding: 10px 40px;
 }
 
 .menu {
