--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -15,15 +16,23 @@ body {
   font-size: 16px;
 }
 
+main {
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
 ul {
   list-style-type: none;
 }
 
 .header {
+  width: 100%;
   display: flex;
   justify-content: flex-end;
   background-color: #393D3F;
-  padding: 20px 40px;
+  padding: 10px 40px;
 }
 
 .menu__list {
@@ -42,6 +51,66 @@ ul {
 .menu__link:hover {
   color: #909090;
   transition: 0.4s;
+}
+
+.custom-shape-divider-bottom-1655648853 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1655648853 svg {
+  position: relative;
+  display: block;
+  width: calc(126% + 1.3px);
+  height: 204px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-bottom-1655648853 .shape-fill {
+  fill: #393D3F;
+}
+
+.cover {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url("../img/header_1.png"), no-repeat;
+  background-size: 100%;
+  filter: grayscale(1);
+  position: relative;
+}
+.cover__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.cover__title {
+  font-size: 40px;
+  font-weight: bold;
+  color: #F7F5FB;
+  margin: 0;
+}
+.cover__text {
+  margin: 20px;
+  font-size: 20px;
+  color: #F7F5FB;
+}
+.cover__btn {
+  background-color: #F7F5FB;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 44px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 20px;
 }
 
 .footer {
