--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ ul {
 }
 
 .custom-shape-divider-bottom-1655648853 .shape-fill {
-  fill: #393D3F;
+  fill: #393d3f;
 }
 
 .cover {
@@ -83,6 +83,26 @@ ul {
   background-size: 100%;
   filter: grayscale(1);
   position: relative;
+}
+.cover .txt-animation {
+  -webkit-animation: animation 2s ease-out;
+          animation: animation 2s ease-out;
+}
+@-webkit-keyframes animation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes animation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .cover__content {
   display: flex;
