--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,17 @@ ul {
   margin-top: 20px;
 }
 
+#about {
+  height: 85vh;
+  padding: 100px 200px;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 30px;
+}
+
 .footer {
   margin: 0;
   background-color: #393D3F;
