--- a/assets/css/_skills.scss
+++ b/assets/css/_skills.scss
@@ -19,5 +19,26 @@
     grid-auto-flow: row;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    padding-left: 0;
+}
+}
+
+.skill{
+display: grid;
+grid-template-rows: 100px repeat(2,auto);
+justify-items: center;
+
+
+
+&__icon{
+ height: 100px;
+ width: 100px;
+ background-color: $light;
+ border-radius: 50%;
+ color: $dark;
+ text-align: center;
+ line-height: 100px;
+ vertical-align:middle;
+ padding: 20px;
 }
 }
