--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,24 @@ ul {
   grid-auto-flow: row;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
+  padding-left: 0;
+}
+
+.skill {
+  display: grid;
+  grid-template-rows: 100px repeat(2, auto);
+  justify-items: center;
+}
+.skill__icon {
+  height: 100px;
+  width: 100px;
+  background-color: #F7F5FB;
+  border-radius: 50%;
+  color: #393D3F;
+  text-align: center;
+  line-height: 100px;
+  vertical-align: middle;
+  padding: 20px;
 }
 
 .footer {
