"experiences" styles, added variations and comments

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,10 +1,14 @@
 //Colors
 $dark: #393D3F;
+//$dark: #000237;
 $light: #F7F5FB;
 $active: #909090;
+//$active: #c76868;
+$block: #d7d5da;
 
 //Fonts
 $primary-font: 'Montserrat', sans-serif;
 $text: 16px;
 $title: 40px;
 $subtitle: 32px;
+$blocktitle: 20px;
