--- a/assets/css/_cover.scss
+++ b/assets/css/_cover.scss
@@ -17,7 +17,8 @@
 }
 
 .custom-shape-divider-bottom-1655648853 .shape-fill {
-  fill: #393d3f;
+  fill: #393D3F;
+  //fill: #000237;
 }
 
 .cover {
@@ -27,7 +28,7 @@
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),
     url("../img/header_1.png"), no-repeat;
   background-size: 100%;
-  filter: grayscale(1);
+  filter: grayscale(0.5);
   position: relative;
 
   .txt-animation {
