updated email link

--- a/assets/css/_contact.scss
+++ b/assets/css/_contact.scss
@@ -9,6 +9,11 @@
     background-color: $dark;
     color: $light;
 
+    a {
+        text-decoration: underline;
+        color: $light;
+    }
+
     &__heading{
         font-size: $title;
     }
