--- a/assets/css/_footer.scss
+++ b/assets/css/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     margin: 0;
-    background-color: $dark;
-    color: $light;
+    background-color: $primary-dark;
+    color: $primary-light;
     font-size: smaller;
     text-align: center;
     padding: 20px;
