--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -11,12 +11,13 @@ html {
 body {
   margin: 0;
   font-family: $primary-font;
-  background-color: $light;
+  background-color: $primary-light;
   font-size: $text;
+  position: relative;
 }
 
 main{
-  margin:0;
+  margin: 0;
   display: flex;
   flex-direction: column;
 }
