--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -1,29 +1,35 @@
 .header {
+    position: fixed;
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    background-color: $dark;
+    background-color: $primary-dark;
     padding: 10px 40px;
+
 }
 
 .menu {
+
     &__list {
-    display: grid;
-    grid-template-columns: repeat(5, auto);   
-    gap: 1.5em;  
+        display: grid;
+        grid-template-columns: repeat(5, auto);
+        gap: 1.5em;
+
     }
+
     &__item {
         padding: 0 10px;
     }
-    &__link{
-        color: $light;
+
+    &__link {
+        color: $primary-light;
         text-decoration: none;
         font-size: larger;
-        &:hover{
+
+        &:hover {
             color: $active;
             transition: 0.4s;
 
         }
     }
-    
 }
