--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
   font-family: "Montserrat", sans-serif;
   background-color: #F7F5FB;
   font-size: 16px;
+  position: relative;
 }
 
 main {
@@ -31,6 +32,7 @@ ul {
 }
 
 .header {
+  position: fixed;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -81,7 +83,7 @@ ul {
 .cover {
   margin: 0;
   padding: 0;
-  height: 90vh;
+  height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url("../img/header_1.png"), no-repeat;
   background-size: 100%;
   filter: grayscale(0.5);
@@ -213,6 +215,10 @@ ul {
   line-height: 100px;
   vertical-align: middle;
   padding: 20px;
+}
+.skill__desc {
+  padding: 20px;
+  margin: 0;
 }
 
 #experience {
