more responsive about section, resetted header

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -12,6 +12,5 @@ $title: 40px;
 $subtitle: 32px;
 $blocktitle: 20px;
 
-//viewport
-$desktop: 1100px;
-$tablet: 640px;
+//Viewport
+$smaller-screen: 1100px;                                                                                                                                                                                                                                                                                                                                                                                                                                                            
