--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -4,17 +4,23 @@
 }
 
 .about {
-    display: grid;
-    grid-template-columns: auto 630px;
+    display: flex;
     justify-content: center;
     align-items: center;
     gap: 2em;
 
+    @media (max-width: $smaller-screen){
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+
     &__info {
+        width: 630px;
         height: 50vh;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
 
         h1,
         h4 {
@@ -32,9 +38,18 @@
     }
 
     &__img {
-        display: flex;
-        justify-content: center;
         height: 50vh;
+        padding-top: 50px;
+
+        img{
+            margin: auto;
+        }
+        @media (max-width:$smaller-screen) {
+            height: auto;
+            img {
+                border-radius: 50%;
+            }
+        }
     }
 
     &__text {
