--- a/assets/css/_cover.scss
+++ b/assets/css/_cover.scss
@@ -21,12 +21,11 @@
 }
 
 .cover {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),
-    url("../img/header_1.png"), no-repeat;
-  background-size: 100%;
+    url("../img/header_1.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100vh;
   filter: grayscale(0.5);
   position: relative;
 
@@ -75,4 +74,5 @@
     cursor: pointer;
     margin-top: 20px;
   }
+
 }
