--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,6 @@ ul {
 }
 
 .header {
-  position: fixed;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -81,11 +80,10 @@ ul {
 }
 
 .cover {
-  margin: 0;
-  padding: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url("../img/header_1.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url("../img/header_1.png"), no-repeat;
-  background-size: 100%;
   filter: grayscale(0.5);
   position: relative;
 }
@@ -144,17 +142,23 @@ ul {
 }
 
 .about {
-  display: grid;
-  grid-template-columns: auto 630px;
+  display: flex;
   justify-content: center;
   align-items: center;
   gap: 2em;
 }
+@media (max-width: 1100px) {
+  .about {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+}
 .about__info {
+  width: 630px;
   height: 50vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
 }
 .about__info h1,
 .about__info h4 {
@@ -168,9 +172,19 @@ ul {
   color: #393D3F;
 }
 .about__img {
-  display: flex;
-  justify-content: center;
   height: 50vh;
+  padding-top: 50px;
+}
+.about__img img {
+  margin: auto;
+}
+@media (max-width: 1100px) {
+  .about__img {
+    height: auto;
+  }
+  .about__img img {
+    border-radius: 50%;
+  }
 }
 .about__text {
   text-align: justify;
@@ -182,10 +196,10 @@ ul {
 }
 
 .skills {
+  display: flex;
   text-align: center;
   background-color: #393D3F;
   color: #F7F5FB;
-  display: flex;
   flex-direction: column;
 }
 .skills h1 {
