aligned cover text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,7 @@ ul {
   margin: 20px;
   font-size: 32px;
   color: #F7F5FB;
+  text-align: center;
 }
 .cover__btn {
   background-color: #F7F5FB;
