--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -11,4 +11,7 @@ $text: 16px;
 $title: 40px;
 $subtitle: 32px;
 $blocktitle: 20px;
-                                                                                                                                                                                                                                                                                                                                                                                                                                                            
+
+//Screen\
+$mobile: 640px;
+$tablet: 1100px;
