About section, responsivity

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -7,10 +7,10 @@ $block: #d7d5da;
 
 //Fonts
 $primary-font: 'Montserrat', sans-serif;
-$text: 16px;
-$title: 40px;
-$subtitle: 32px;
-$blocktitle: 20px;
+$text: 1rem;
+$title: 2.5rem;
+$subtitle: 2rem;
+$blocktitle: 1.25rem;
 
 //Screen\
 $mobile: 640px;
