--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -1,6 +1,7 @@
 #about {
     padding: 100px;
     margin: 20px;
+    width: 100vw;
 }
 
 .about {
@@ -10,8 +11,7 @@
     gap: 2em;
 
     &__info {
-        width: 630px;
-        height: 50vh;
+        width: 34%;
         display: flex;
         flex-direction: column;
 
@@ -31,17 +31,39 @@
     }
 
     &__img {
-        height: 50vh;
-        padding-top: 50px;
+        height: 16rem;
+        padding-top: 2rem;
 
-        img{
-            margin: auto;
-        }
-       
     }
 
     &__text {
         text-align: justify;
         text-justify: inter-word;
+    }
+}
+
+@media only screen and (max-width:$mobile) {
+    .about {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+
+        &__img {
+            display: flex;
+            justify-content: center;
+            height: auto;
+            padding: 0;
+
+            img {
+                width: 30%;
+                border-radius: 50%;
+                margin: auto;
+            }
+        }
+
+        &__info {
+            width: 100%;
+            text-align: center;
+        }
     }
 }
