image size redo

--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -55,7 +55,7 @@
             padding: 0;
 
             img {
-                width: 40%;
+                width: 30vh;
                 border-radius: 50%;
                 margin: auto;
             }
