--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -65,5 +65,14 @@
             width: 100%;
             text-align: center;
         }
+
+        &__social{
+            display: flex;
+            justify-content: center;
+        }
+
+        &__text{
+            text-align: justify;
+        }
     }
 }
