--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -50,12 +50,13 @@
 
         &__img {
             display: flex;
-            justify-content: center;
+            justify-content: left;
             height: auto;
             padding: 0;
+            align-self: flex-start;
 
             img {
-                width: 30vh;
+                width: 25vh;
                 border-radius: 50%;
                 margin: auto;
             }
@@ -63,12 +64,12 @@
 
         &__info {
             width: 100%;
-            text-align: center;
+            text-align: left;
         }
 
         &__social{
             display: flex;
-            justify-content: center;
+            justify-content: left;
         }
 
         &__text{
