--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -35,15 +35,11 @@
         padding-top: 2rem;
 
     }
-
-    &__text {
-        text-align: justify;
-        text-justify: inter-word;
-    }
 }
 
 @media only screen and (max-width:$mobile) {
     .about {
+        min-width: fit-content;
         width: 100vw;
         display: flex;
         flex-direction: column;
