--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -33,3 +33,9 @@ section{
 .section__title{
 font-size: $title;
 }
+
+@media only screen and (max-width: $mobile){
+  body{
+    font-size: 0.85rem;
+  }
+}
