--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -12,6 +12,7 @@ $title: 2.5rem;
 $subtitle: 2rem;
 $blocktitle: 1.25rem;
 
-//Screen\
-$mobile: 640px;
-$tablet: 1100px;
+//Screen
+
+$mobile: 480px;
+$medium-size: 1024px;
