--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -37,5 +37,6 @@ font-size: $title;
 @media only screen and (max-width: $mobile){
   body{
     font-size: 0.85rem;
+    overflow-x: hidden;
   }
 }
