--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,9 +35,10 @@ section {
   font-size: 2.5rem;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 480px) {
   body {
     font-size: 0.85rem;
+    overflow-x: hidden;
   }
 }
 .header {
@@ -148,11 +149,10 @@ section {
   margin-top: 20px;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 480px) {
   .cover {
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
   }
-
   .custom-shape-divider-bottom-1655648853 {
     display: none;
   }
@@ -190,7 +190,7 @@ section {
   padding-top: 2rem;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 480px) {
   .about {
     min-width: -webkit-fit-content;
     min-width: -moz-fit-content;
@@ -268,7 +268,7 @@ section {
   margin: 0;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 480px) {
   .skills {
     padding: 10%;
   }
@@ -281,6 +281,7 @@ section {
 }
 #experience {
   padding: 100px;
+  text-align: center;
 }
 #experience h1 {
   text-align: center;
@@ -306,14 +307,13 @@ section {
   font-size: 1.25rem;
 }
 
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 480px) {
+  #experience {
+    padding: 6rem 1em;
+  }
   #experience ul {
     display: flex;
     flex-direction: column;
-  }
-
-  .experience {
-    flex-grow: 1;
   }
 }
 #contact {
@@ -323,6 +323,7 @@ section {
 
 .contact {
   display: flex;
+  flex: 1 1 0;
   justify-content: space-between;
   background-color: #393D3F;
   color: #F7F5FB;
@@ -332,15 +333,26 @@ section {
   color: #F7F5FB;
 }
 .contact__heading {
-  font-size: 2.5rem;
+  font-size: xx-large;
 }
 .contact__subheading {
-  font-size: 1.25rem;
+  font-size: larger;
+  margin: 0.5em;
 }
-.contact__small {
-  font-size: 1.25rem;
+.contact__text {
+  font-size: 1rem;
+  margin: 0.5;
 }
 
+@media only screen and (max-width: 480px) {
+  .contact {
+    display: flex;
+    flex-direction: column;
+  }
+  .contact__item {
+    text-align: center;
+  }
+}
 .footer {
   margin: 0;
   background-color: #393D3F;
