responsivity and design tweaks

--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -37,7 +37,7 @@
     }
 }
 
-@media only screen and (max-width:$mobile) {
+@media only screen and (max-width:$tablet) {
     .about {
         min-width: fit-content;
         width: 100vw;
