--- a/assets/css/_cover.scss
+++ b/assets/css/_cover.scss
@@ -24,7 +24,7 @@
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)),
     url("../img/header_1.png");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   height: 100vh;
   filter: grayscale(0.5);
   position: relative;
