--- a/assets/css/_skills.scss
+++ b/assets/css/_skills.scss
@@ -24,9 +24,12 @@
 }
 
 .skill {
-    display: grid;
-    grid-template-rows: 100px repeat(2, auto);
+    display: flex;
+    flex-direction: column;
     justify-items: center;
+    align-items: center;
+    gap: 0.25rem;
+    flex: 1 1 0;
 
     &__icon {
         height: 100px;
@@ -41,9 +44,20 @@
     }
 
     &__desc{
-        padding: 20px;
-        margin:0;
+        margin-top: 1rem;
+        display: grid;
+        grid-template-rows: repeat(2,auto);
     }
+
+    &__title{
+        margin-bottom: 0;
+    }
+
+    &__text{
+        margin-top: 0.5rem;
+    }
+
+  
 }
 
 @media only screen and (max-width:$mobile){
@@ -57,5 +71,17 @@
         gap: 2em;
        }
 
+    }
+}
+
+@media only screen and (max-width: $tablet){
+    .skills{
+        padding: 10%;
+
+        &__list{
+            display: grid;
+            grid-template-columns: repeat(2, auto);
+            gap: 2em;
+        }
     }
 }
