--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ section {
 .cover {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url("../img/header_1.png");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   height: 100vh;
   filter: grayscale(0.5);
   position: relative;
@@ -190,7 +190,7 @@ section {
   padding-top: 2rem;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 820px) {
   .about {
     min-width: -webkit-fit-content;
     min-width: -moz-fit-content;
@@ -248,9 +248,12 @@ section {
 }
 
 .skill {
-  display: grid;
-  grid-template-rows: 100px repeat(2, auto);
+  display: flex;
+  flex-direction: column;
   justify-items: center;
+  align-items: center;
+  gap: 0.25rem;
+  flex: 1 1 0;
 }
 .skill__icon {
   height: 100px;
@@ -264,8 +267,15 @@ section {
   padding: 20px;
 }
 .skill__desc {
-  padding: 20px;
-  margin: 0;
+  margin-top: 1rem;
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+}
+.skill__title {
+  margin-bottom: 0;
+}
+.skill__text {
+  margin-top: 0.5rem;
 }
 
 @media only screen and (max-width: 480px) {
@@ -276,6 +286,16 @@ section {
     display: flex;
     flex-direction: column;
     margin: auto;
+    gap: 2em;
+  }
+}
+@media only screen and (max-width: 820px) {
+  .skills {
+    padding: 10%;
+  }
+  .skills__list {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
     gap: 2em;
   }
 }
