--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -13,6 +13,6 @@ $subtitle: 2rem;
 $blocktitle: 1.25rem;
 
 //Screen
-
-$mobile: 480px;
-$tablet: 820px;
+$smaller-devices: 480px;
+$mobile: 640px;
+$tablet: 1100px;
