--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -1,25 +1,47 @@
-
 .header {
     position: fixed;
     width: 100vw;
     display: flex;
     justify-content: flex-end;
     background-color: $primary-dark;
-    padding: 10px 40px;
+    padding: .8rem 2rem;
     z-index: 100;
 }
 
 .menu {
+    position: relative;
+    display: flex;
+    position: relative;
+    justify-content: space-between; 
+    align-items: center; 
+
+    .toggle-btn {
+        position: absolute;
+        right: 1rem;
+        display: none;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 30px;
+        height: 21px;
+    }
+    
+    .bar {
+        width: 100%;
+        height: 3px;
+        background-color: $primary-light;
+        border: 10px;
+       
+    }
 
     &__list {
-        display: grid;
-        grid-template-columns: repeat(5, auto);
-        gap: 1.5em;
-
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     &__item {
-        padding: 0 10px;
+        display: block;
+        padding: 0 1rem;
     }
 
     &__link {
@@ -30,7 +52,40 @@
         &:hover {
             color: $active;
             transition: 0.4s;
+        }
+    }
+}
 
+@media only screen and (max-width: $mobile) {
+
+    .header {
+        flex-direction: column;
+    }
+
+    .menu {
+        flex-direction: column;
+        height: 1.5rem;
+
+        .toggle-btn {
+            display: flex;
+        }
+
+        &__list {
+            display: none;
+            flex-direction: column;
+            align-items: flex-start;
+            background-color: $primary-dark;
+            justify-items: center;
+
+            &.active {
+                display: flex;
+                width: 100vw;
+            }
+        }
+
+        &__item {
+            display: block;
+            padding: 0.5rem 1rem;
         }
     }
 }
