--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,17 +47,40 @@ section {
   display: flex;
   justify-content: flex-end;
   background-color: #393D3F;
-  padding: 10px 40px;
+  padding: 0.8rem 2rem;
   z-index: 100;
 }
 
+.menu {
+  position: relative;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu .toggle-btn {
+  position: absolute;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+.menu .bar {
+  width: 100%;
+  height: 3px;
+  background-color: #F7F5FB;
+  border: 10px;
+}
 .menu__list {
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  gap: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .menu__item {
-  padding: 0 10px;
+  display: block;
+  padding: 0 1rem;
 }
 .menu__link {
   color: #F7F5FB;
@@ -69,6 +92,33 @@ section {
   transition: 0.4s;
 }
 
+@media only screen and (max-width: 640px) {
+  .header {
+    flex-direction: column;
+  }
+  .menu {
+    flex-direction: column;
+    height: 1.5rem;
+  }
+  .menu .toggle-btn {
+    display: flex;
+  }
+  .menu__list {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: #393D3F;
+    justify-items: center;
+  }
+  .menu__list.active {
+    display: flex;
+    width: 100vw;
+  }
+  .menu__item {
+    display: block;
+    padding: 0.5rem 1rem;
+  }
+}
 .custom-shape-divider-bottom-1655648853 {
   position: absolute;
   bottom: 0;
