responsive menu tweaks

--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -66,6 +66,10 @@
         flex-direction: column;
         height: 1.5rem;
 
+        &__home{
+            display: none;
+        }
+
         .toggle-btn {
             display: flex;
         }
