--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,9 @@ section {
     flex-direction: column;
     height: 1.5rem;
   }
+  .menu__home {
+    display: none;
+  }
   .menu .toggle-btn {
     display: flex;
   }
